pushing new changes

--- a/leadership.html
+++ b/leadership.html
@@ -505,9 +505,9 @@ header nav a:hover::after {
     <article class="block bg1 row1 col2">
         <div class="basic">
             
-            <h2> My Philosophy </h2>
-            <ol>
-            </ol>
+            <h2> My Philosophy<span> (very demure, very mindful) </span> </h2>
+            <p>You know what's funny? I actually dont think I was born to lead. Growing up I was timid; I had a stammer, and I was scared of everything. But still, leadership always found me - from class captain, to Student Council, and to University leadership.</p>
+<p> I'm not a loud leader. I'm reserved, but my peers like that I'm level-headed. I give good advice, I listen, and most importantly, I'm a good resource - my skills, my connections, and proactiveness is what makes me dependable. When I lead, I serve. </p>          
             
         </div>
     </article>
