--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ main {
 /*image box styles */
 
 .ftr {
-    position:relative; 
+    position:flex; 
     width:100%; 
     height:100%; 
     padding:0;
@@ -711,7 +711,7 @@ quote block syntax:
         <div class="info">
             <h3> Hey There! </h3>
             
-    <p>Thanks for visiting my page, it's nice to meet you!<br> I'm Mariha, undergraduate senior, SWE intern at Cleveland Clinic, and the left handed twin. <br><br>Please feel free to explore at your own pace! Go over to projects to se what I've been working on, or my work experiences to see where I'm at currently. Please also acquaint yourself with my cats (I have four!) by following the links in the nav bar. If you're curious as to how I've been , places I'm going, or what I'm reading/watching, head over to Updates! </p>
+    <p>Thanks for visiting my page, it's nice to meet you! I'm Mariha, undergraduate senior, SWE intern at Cleveland Clinic, and the left handed twin. <br>Please feel free to explore at your own pace! Go over to projects to se what I've been working on, or my work experiences to see where I'm at currently. Please also acquaint yourself with my cats (I have four!) by following the links in the nav bar. If you're curious as to how I've been , places I'm going, or what I'm reading/watching, head over to Updates! </p>
             
         </div>
         </article>
