--- a/projects.html
+++ b/projects.html
@@ -177,7 +177,7 @@ main {
 
 .bg1 {background:var(--box-one);}
 .bg2 {background:var(--box-two);}
-.ftr {background:var(--accent);}
+.ftr {background:var(--bg-color);}
 
 /*image box styles */
 
