--- a/cats.html
+++ b/cats.html
@@ -9,7 +9,7 @@ image: profile.jpg
  
 <head>
  
-<title>Mariha as a Leader</title> 
+<title>Meet the Cats</title> 
 <link rel="shortcut icon" href="{Favicon}">
 <link rel="alternate" type="application/rss+xml" href="{RSS}">
 
@@ -551,14 +551,22 @@ header nav a:hover::after {
 <article class="block bg1 row1 col2">
     <div class="basic">
         <h2> Tora-chan</h2>
-        And this is Tora-chan, as in "Tiger," becasue he looks like a tiger and lowkey also walks like a tiger. He likes to hunt Puchki in his free time - he's kind of a bully to him but at the same time, the biggest scaredy-cat I know. He is also, as demonstrated in the picture, an ipad kid.
-
+       <p> And this is Tora-chan, as in "Tiger," becasue he looks like a tiger and lowkey also walks like a tiger. He likes to hunt Puchki in his free time - he's kind of a bully to him but at the same time, the biggest scaredy-cat I know. He is also, as demonstrated in the picture, an ipad kid.</p>
     </div>
 </article>
 <article class="block ftr row1 col1">
     <img src="https://cdn.discordapp.com/attachments/692038836292943873/1286202266268729344/image.png?ex=66ed0cb4&is=66ebbb34&hm=1feb327b9cc26b0416a123f0c16dd8d8a98a07b2bd3638ceacf9113beaa2e27c&"/>
 </article>    
+<article class="block ftr row1 col1">
+    <img src="https://cdn.discordapp.com/attachments/692038836292943873/1286201762688274462/IMG-20230915-WA0018_ex66ed0bbeis66ebba3ehm4602f10bcc5d9e53d72bd6a249e41b0ab913a77e891a1ffb6d864ddeda7e21ac.png?ex=66ed0c3c&is=66ebbabc&hm=1d43c1716f0d052c92c4f70c526ba15053ceafcbbc9de70326cc42fec7cc8405&"/>
+</article>    
+<article class="block bg3 row1 col2">
+    <div class="basic">
+        <h2> Umi-chan</h2>
+       <p>Last, but never least, is my darling Umi. She was named after the sea, because she's almost pure white and had blue eys as a child. She stays to herself mostly, and holds herself like a queen. She loves back pets, she loves my dad, and since I smell like my dad, she also loves me. </p>
 
+    </div>
+</article>
 <!----------------------------------------------------------------------------->
       	
 </main>
