--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@ image: profile.jpg
  
 <head>
  
-<title>Mariha as a Leader</title> 
+<title>Cool things I've made</title> 
 <link rel="shortcut icon" href="{Favicon}">
 <link rel="alternate" type="application/rss+xml" href="{RSS}">
 
