--- a/projects.html
+++ b/projects.html
@@ -495,7 +495,7 @@ header nav a:hover::after {
         <a href="leadership.html">leadership</a>
         <a href="experience.html">work experiences</a>
         <a href="cats.html">my cats</a>
-        <a href="updates.html">updates</a>
+ <!--       <a href="updates.html">updates</a> -->
 
    
     </nav>
