--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ quote block syntax:
     
     <!-- an image block... -->
     <article class="block ftr row1 col1">
-        <img src="https://cdn.discordapp.com/attachments/692038836292943873/1285499835465732097/IMG_20230917_203436_2465.jpg?ex=66ec78c4&is=66eb2744&hm=de79456e776a76297e592f0e719aa24b9b11ee8fa4a9f111a616a9481472af19&"/>
+        <img src="profilepic.jpg"/>
     </article>
     
 
