--- a/cats.html
+++ b/cats.html
@@ -531,11 +531,11 @@ header nav a:hover::after {
     </article>
     <!-- an image block... -->
     <article class="block ftr row1 col1">
-        <img src="https://cdn.discordapp.com/attachments/1276738081705299980/1286207369382072350/IMG_20240430_095918_911.jpg?ex=66ed1175&is=66ebbff5&hm=df5278e5f77176fb9ee517a8fc71b9df1ff37c6b42fe115c53114c98ec2c7d80&"/>
+        <img src="shochan.png"/>
     </article>
     
 <article class="block ftr row1 col1">
-    <img src="https://cdn.discordapp.com/attachments/1279038727473070225/1286201415219548221/IMG-20240611-WA00092.jpg?ex=66ed0be9&is=66ebba69&hm=1648de26dcfd403681c33e34ad1cc872930d448492b9359f40fb4e83791c9a7c&"/>
+    <img src="puchki.jpg"/>
 </article>
  
 
@@ -555,10 +555,10 @@ header nav a:hover::after {
     </div>
 </article>
 <article class="block ftr row1 col1">
-    <img src="https://cdn.discordapp.com/attachments/692038836292943873/1286202266268729344/image.png?ex=66ed0cb4&is=66ebbb34&hm=1feb327b9cc26b0416a123f0c16dd8d8a98a07b2bd3638ceacf9113beaa2e27c&"/>
+    <img src="tora.png"/>
 </article>    
 <article class="block ftr row1 col1">
-    <img src="https://cdn.discordapp.com/attachments/692038836292943873/1286201762688274462/IMG-20230915-WA0018_ex66ed0bbeis66ebba3ehm4602f10bcc5d9e53d72bd6a249e41b0ab913a77e891a1ffb6d864ddeda7e21ac.png?ex=66ed0c3c&is=66ebbabc&hm=1d43c1716f0d052c92c4f70c526ba15053ceafcbbc9de70326cc42fec7cc8405&"/>
+    <img src="umi.png"/>
 </article>    
 <article class="block bg3 row1 col2">
     <div class="basic">
