--- a/projects.html
+++ b/projects.html
@@ -543,7 +543,7 @@ header nav a:hover::after {
         </article>
 
     <article class="block ftr row1 col1">
-        <img src="https://cdn.discordapp.com/attachments/692038836292943873/1286136213463629845/20231105_015841_ex66ec748dis66eb230dhm642edcfac45e5d44dd56b736d6ae6ada44907c833fafd788a11f5bdd7240ad02.png?ex=66eccf30&is=66eb7db0&hm=7a986d981657a70bfd472b00f8fc4b3d0f0294847ab99c9473c02484553af9f1&">
+        <img src="smartwear.png">
     </article>
 
     <article class="block bg1 row1 col1">
