--- a/leadership.html
+++ b/leadership.html
@@ -531,7 +531,7 @@ header nav a:hover::after {
     </article>
 
     <article class="block ftr row1 col1">
-        <img src="https://cdn.discordapp.com/attachments/1279038727473070225/1286170749907767327/Screenshot_20240918_215042_Instagram3.jpg?ex=66ecef5a&is=66eb9dda&hm=d828d43b5336006fdb369a75e636914a2e16c78d53dcf03e8efa01a394165d5c&"/>
+        <img src="sld.jpg"/>
     </article>
 
 
@@ -556,7 +556,7 @@ header nav a:hover::after {
 </article>
 
 <article class="block ftr row1 col1">
-    <img src="https://cdn.discordapp.com/attachments/1279038727473070225/1286193628464680972/20230624_1442035.jpg?ex=66ed04a9&is=66ebb329&hm=bd23fa6b5b051f58271d9c8b91b13c7af35fc72751284606286cc033f09ec5af&"/>
+    <img src="leaderdc.jpg"/>
 </article>
 <article class="block bg2 row1 col1">
     <div class="basic">
