--- a/projects.html
+++ b/projects.html
@@ -543,7 +543,7 @@ header nav a:hover::after {
         </article>
 
     <article class="block ftr row1 col1">
-        <img src="smartwear.png">
+        <img src="smartwear.png"/>
     </article>
 
     <article class="block bg1 row1 col1">
